// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TabBar component should render with badges 1`] = `
<Uncontrolled(TabContainer)
  activeKey="3"
  className="tabs-classname"
  id="my-tabs"
  onKeyDown={[Function]}
  onSelect={[Function]}
>
  <div>
    <div
      className="theme-tc-tab-bar-menu tc-tab-bar-menu"
    >
      <Nav
        bsClass="nav"
        bsStyle="tabs"
        className="theme-tc-tab-bar tc-tab-bar theme-tc-tab-bar-responsive tc-tab-bar-responsive"
        justified={false}
        pullLeft={false}
        pullRight={false}
        stacked={false}
      >
        <NavItem
          active={false}
          className="theme-tc-tab-bar-item tc-tab-bar-item"
          componentClass="button"
          data-feature="action.1"
          disabled={false}
          eventKey="1"
          label="Tab1"
        >
          <TooltipTrigger
            label="967 Tab1"
            tooltipPlacement="top"
          >
            <span>
              <span
                className="theme-tc-tab-bar-item-label"
              >
                Tab1
              </span>
              <ForwardRef
                className="theme-tc-tab-bar-item-badge tc-tab-bar-item-badge custom-class-name"
              >
                967
              </ForwardRef>
            </span>
          </TooltipTrigger>
        </NavItem>
        <NavItem
          active={false}
          className="theme-tc-tab-bar-item tc-tab-bar-item"
          componentClass="button"
          data-feature="action.2"
          disabled={false}
          eventKey="2"
          label="Tab2"
        >
          <TooltipTrigger
            label="1287 Tab2"
            tooltipPlacement="top"
          >
            <span>
              <span
                className="theme-tc-tab-bar-item-label"
              >
                Tab2
              </span>
              <ForwardRef
                className="theme-tc-tab-bar-item-badge tc-tab-bar-item-badge"
              >
                999+
              </ForwardRef>
            </span>
          </TooltipTrigger>
        </NavItem>
      </Nav>
    </div>
    <TabContent
      animation={true}
      bsClass="tab"
      componentClass="div"
      mountOnEnter={false}
      unmountOnExit={false}
    >
      <TabPane
        bsClass="tab-pane"
        eventKey="1"
      />
      <TabPane
        bsClass="tab-pane"
        eventKey="2"
      />
    </TabContent>
  </div>
</Uncontrolled(TabContainer)>
`;

exports[`TabBar component should render with selected children from item definition 1`] = `
<Uncontrolled(TabContainer)
  activeKey="3"
  className="tabs-classname"
  id="my-tabs"
  onKeyDown={[Function]}
  onSelect={[Function]}
>
  <div>
    <div
      className="theme-tc-tab-bar-menu tc-tab-bar-menu"
    >
      <Nav
        bsClass="nav"
        bsStyle="tabs"
        className="theme-tc-tab-bar tc-tab-bar theme-tc-tab-bar-responsive tc-tab-bar-responsive"
        justified={false}
        pullLeft={false}
        pullRight={false}
        stacked={false}
      >
        <NavItem
          active={false}
          className="theme-tc-tab-bar-item tc-tab-bar-item"
          componentClass="button"
          data-feature="action.1"
          disabled={false}
          eventKey="1"
          label="Tab1"
        >
          <TooltipTrigger
            label="Tab1"
            tooltipPlacement="top"
          >
            <span>
              <span
                className="theme-tc-tab-bar-item-label"
              >
                Tab1
              </span>
            </span>
          </TooltipTrigger>
        </NavItem>
        <NavItem
          active={false}
          className="theme-tc-tab-bar-item tc-tab-bar-item"
          componentClass="button"
          data-feature="action.2"
          disabled={false}
          eventKey="2"
          label="Tab2"
        >
          <TooltipTrigger
            label="Tab2"
            tooltipPlacement="top"
          >
            <span>
              <span
                className="theme-tc-tab-bar-item-label"
              >
                Tab2
              </span>
            </span>
          </TooltipTrigger>
        </NavItem>
        <NavItem
          active={false}
          className="theme-tc-tab-bar-item tc-tab-bar-item"
          componentClass="button"
          data-feature="action.3"
          disabled={false}
          eventKey="3"
          label="Tab3"
        >
          <TooltipTrigger
            label="Tab3"
            tooltipPlacement="top"
          >
            <span>
              <span
                className="theme-tc-tab-bar-item-label"
              >
                Tab3
              </span>
            </span>
          </TooltipTrigger>
        </NavItem>
        <NavItem
          active={false}
          className="theme-tc-tab-bar-item tc-tab-bar-item"
          componentClass="button"
          data-feature="action.4"
          disabled={false}
          eventKey="4"
          label="Tab4"
        >
          <TooltipTrigger
            label="Tab4"
            tooltipPlacement="top"
          >
            <span>
              <span
                className="theme-tc-tab-bar-item-label"
              >
                Tab4
              </span>
            </span>
          </TooltipTrigger>
        </NavItem>
        <NavItem
          active={false}
          className="theme-tc-tab-bar-item tc-tab-bar-item"
          componentClass="button"
          data-feature="action.5"
          disabled={false}
          eventKey="5"
          label="Tab5"
        >
          <TooltipTrigger
            label="Tab5"
            tooltipPlacement="top"
          >
            <span>
              <span
                className="theme-tc-tab-bar-item-label"
              >
                Tab5
              </span>
            </span>
          </TooltipTrigger>
        </NavItem>
      </Nav>
    </div>
    <TabContent
      animation={true}
      bsClass="tab"
      componentClass="div"
      mountOnEnter={false}
      unmountOnExit={false}
    >
      <TabPane
        bsClass="tab-pane"
        eventKey="1"
      >
        <div>
          child 
          0
        </div>
      </TabPane>
      <TabPane
        bsClass="tab-pane"
        eventKey="2"
      >
        <div>
          child 
          1
        </div>
      </TabPane>
      <TabPane
        bsClass="tab-pane"
        eventKey="3"
      >
        <div>
          child 
          2
        </div>
      </TabPane>
      <TabPane
        bsClass="tab-pane"
        eventKey="4"
      >
        <div>
          child 
          3
        </div>
      </TabPane>
      <TabPane
        bsClass="tab-pane"
        eventKey="5"
      >
        <div>
          child 
          4
        </div>
      </TabPane>
    </TabContent>
  </div>
</Uncontrolled(TabContainer)>
`;

exports[`TabBar component should render with selected children managed by user 1`] = `
<Uncontrolled(TabContainer)
  activeKey="3"
  className="tabs-classname"
  id="my-tabs"
  onKeyDown={[Function]}
  onSelect={[Function]}
>
  <div>
    <div
      className="theme-tc-tab-bar-menu tc-tab-bar-menu"
    >
      <Nav
        bsClass="nav"
        bsStyle="tabs"
        className="theme-tc-tab-bar tc-tab-bar theme-tc-tab-bar-responsive tc-tab-bar-responsive"
        justified={false}
        pullLeft={false}
        pullRight={false}
        stacked={false}
      >
        <NavItem
          active={false}
          className="theme-tc-tab-bar-item tc-tab-bar-item"
          componentClass="button"
          data-feature="action.1"
          disabled={false}
          eventKey="1"
          label="Tab1"
        >
          <TooltipTrigger
            label="Tab1"
            tooltipPlacement="top"
          >
            <span>
              <span
                className="theme-tc-tab-bar-item-label"
              >
                Tab1
              </span>
            </span>
          </TooltipTrigger>
        </NavItem>
        <NavItem
          active={false}
          className="theme-tc-tab-bar-item tc-tab-bar-item"
          componentClass="button"
          data-feature="action.2"
          disabled={false}
          eventKey="2"
          label="Tab2"
        >
          <TooltipTrigger
            label="Tab2"
            tooltipPlacement="top"
          >
            <span>
              <span
                className="theme-tc-tab-bar-item-label"
              >
                Tab2
              </span>
            </span>
          </TooltipTrigger>
        </NavItem>
        <NavItem
          active={false}
          className="theme-tc-tab-bar-item tc-tab-bar-item"
          componentClass="button"
          data-feature="action.3"
          disabled={false}
          eventKey="3"
          label="Tab3"
        >
          <TooltipTrigger
            label="Tab3"
            tooltipPlacement="top"
          >
            <span>
              <span
                className="theme-tc-tab-bar-item-label"
              >
                Tab3
              </span>
            </span>
          </TooltipTrigger>
        </NavItem>
        <NavItem
          active={false}
          className="theme-tc-tab-bar-item tc-tab-bar-item"
          componentClass="button"
          data-feature="action.4"
          disabled={false}
          eventKey="4"
          label="Tab4"
        >
          <TooltipTrigger
            label="Tab4"
            tooltipPlacement="top"
          >
            <span>
              <span
                className="theme-tc-tab-bar-item-label"
              >
                Tab4
              </span>
            </span>
          </TooltipTrigger>
        </NavItem>
        <NavItem
          active={false}
          className="theme-tc-tab-bar-item tc-tab-bar-item"
          componentClass="button"
          data-feature="action.5"
          disabled={false}
          eventKey="5"
          label="Tab5"
        >
          <TooltipTrigger
            label="Tab5"
            tooltipPlacement="top"
          >
            <span>
              <span
                className="theme-tc-tab-bar-item-label"
              >
                Tab5
              </span>
            </span>
          </TooltipTrigger>
        </NavItem>
      </Nav>
    </div>
    <TabContent
      animation={true}
      bsClass="tab"
      componentClass="div"
      mountOnEnter={false}
      unmountOnExit={false}
    >
      <TabPane
        bsClass="tab-pane"
        eventKey="1"
      />
      <TabPane
        bsClass="tab-pane"
        eventKey="2"
      />
      <TabPane
        bsClass="tab-pane"
        eventKey="3"
      >
        I'm the content
      </TabPane>
      <TabPane
        bsClass="tab-pane"
        eventKey="4"
      />
      <TabPane
        bsClass="tab-pane"
        eventKey="5"
      />
    </TabContent>
  </div>
</Uncontrolled(TabContainer)>
`;
